some fix on sidebar to show better on mobile devices

--- a/public_html/static/css/scss/responsive/_mobile.scss
+++ b/public_html/static/css/scss/responsive/_mobile.scss
@@ -1,13 +1,13 @@
 @media (max-width: 767px) {
 	.ltr #page{margin-left: 0;}
 	.rtl #page{margin-right: 0;}
-	.ltr #sidebar{left: -5rem;}
-	.rtl #sidebar{right: -5rem;}
+	.ltr #sidebar{left: -51px;}
+	.rtl #sidebar{right: -51px;}
 	#header {min-height: auto;}
 	#header .sidenavHandler{display: inline-block;}
 	#header .links a{display: none;}
 
-	.topTitle{padding-top:50px; }
+	.topTitle{padding:50px 10px 40px; }
 	.topTitle h2{font-size: 2em!important;line-height:2em;}
 	.topTitle h3{font-size: 1.4em!important;}
 
